[gd_scene load_steps=4 format=2]

[ext_resource path="res://GameObject/Entity/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameObject/PlayerProjectile/Core/PlayerProjectile.gd" type="Script" id=2]
[ext_resource path="res://Lib/Instanceable/BulletBehavior/BulletBehavior.tscn" type="PackedScene" id=4]

[node name="PlayerProjectileCore" instance=ExtResource( 1 )]
script = ExtResource( 2 )
base_hp = 1.0
base_atk = 0.0
base_def = 0.0
crit_rate = 0.0
crit_damage_rate = 0.0

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="." index="0"]
visible = false
rect = Rect2( -8, -8, 16, 16 )

[node name="BulletBehavior" parent="." index="1" instance=ExtResource( 4 )]
speed = 240.0
angle_in_degrees = -90.0

[node name="Sprite" type="Sprite" parent="." index="2"]

[node name="Hitbox" type="Node2D" parent="." index="3"]

[node name="Area2D" type="Area2D" parent="Hitbox" index="0"]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Area2D" index="0"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Hitbox/Area2D" to="." method="_on_Area2D_area_entered"]
